--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.41</version>
-		</dependency>	
+		</dependency>
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
@@ -40,9 +40,19 @@
 			<version>3.5.1</version>
 		</dependency>
 		<dependency>
-		 	<groupId>commons-codec</groupId>
-  			<artifactId>commons-codec</artifactId>
-  			<version>1.10</version>
-  		</dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>	 
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.spotify</groupId>
+			<artifactId>docker-client</artifactId>
+			<version>7.0.2</version>
+		</dependency>
 	</dependencies>
 </project>
